Minor improvements to HTMLMediaElement https://bugs.webkit.org/show_bug.cgi?id=105353

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2012-12-18
Reviewed by Eric Carlson.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::canPlayType):
(WebCore::createFileURLForApplicationCacheResource):
(WebCore::stringForNetworkState):
(WebCore::HTMLMediaElement::preload):
(WebCore::HTMLMediaElement::getPluginProxyParams):
Use ASCIILiteral for literal strings becoming WTFStrings.

(WebCore::HTMLMediaElement::setLoop):
By going through setAttribute, parseAttribute would already take care of
updating the disable sleep, so the call here is not needed.

Canonical link: https://commits.webkit.org/123600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138097 268f45cc-cd09-0410-ab3c-d52691b4dbfc