Source/WebCore/html/HTMLMediaElement.cpp
@@ -665,13 +665,13 @@ String HTMLMediaElement::canPlayType(const String& mimeType, const String& keySy
     switch (support)
     {
         case MediaPlayer::IsNotSupported:
-            canPlay = "";
+            canPlay = ASCIILiteral("");
             break;
         case MediaPlayer::MayBeSupported:
-            canPlay = "maybe";
+            canPlay = ASCIILiteral("maybe");
             break;
         case MediaPlayer::IsSupported:
-            canPlay = "probably";
+            canPlay = ASCIILiteral("probably");
             break;
     }
     
@@ -929,7 +929,7 @@ static KURL createFileURLForApplicationCacheResource(const String& path)
 #else
     KURL url;
 
-    url.setProtocol("file");
+    url.setProtocol(ASCIILiteral("file"));
     url.setPath(path);
 #endif
     return url;
@@ -1571,13 +1571,13 @@ static void logMediaLoadRequest(Page* page, const String& mediaEngine, const Str
 static String stringForNetworkState(MediaPlayer::NetworkState state)
 {
     switch (state) {
-    case MediaPlayer::Empty: return "Empty";
-    case MediaPlayer::Idle: return "Idle";
-    case MediaPlayer::Loading: return "Loading";
-    case MediaPlayer::Loaded: return "Loaded";
-    case MediaPlayer::FormatError: return "FormatError";
-    case MediaPlayer::NetworkError: return "NetworkError";
-    case MediaPlayer::DecodeError: return "DecodeError";
+    case MediaPlayer::Empty: return ASCIILiteral("Empty");
+    case MediaPlayer::Idle: return ASCIILiteral("Idle");
+    case MediaPlayer::Loading: return ASCIILiteral("Loading");
+    case MediaPlayer::Loaded: return ASCIILiteral("Loaded");
+    case MediaPlayer::FormatError: return ASCIILiteral("FormatError");
+    case MediaPlayer::NetworkError: return ASCIILiteral("NetworkError");
+    case MediaPlayer::DecodeError: return ASCIILiteral("DecodeError");
     default: return emptyString();
     }
 }
@@ -2310,13 +2310,13 @@ String HTMLMediaElement::preload() const
 {
     switch (m_preload) {
     case MediaPlayer::None:
-        return "none";
+        return ASCIILiteral("none");
         break;
     case MediaPlayer::MetaData:
-        return "metadata";
+        return ASCIILiteral("metadata");
         break;
     case MediaPlayer::Auto:
-        return "auto";
+        return ASCIILiteral("auto");
         break;
     }
 
@@ -2520,9 +2520,6 @@ void HTMLMediaElement::setLoop(bool b)
 {
     LOG(Media, "HTMLMediaElement::setLoop(%s)", boolString(b));
     setBooleanAttribute(loopAttr, b);
-#if PLATFORM(MAC)
-    updateDisableSleep();
-#endif
 }
 
 bool HTMLMediaElement::controls() const
@@ -3966,14 +3963,14 @@ void HTMLMediaElement::getPluginProxyParams(KURL& url, Vector<String>& names, Ve
     if (isVideo()) {
         KURL posterURL = getNonEmptyURLAttribute(posterAttr);
         if (!posterURL.isEmpty() && frame && frame->loader()->willLoadMediaElementURL(posterURL)) {
-            names.append("_media_element_poster_");
+            names.append(ASCIILiteral("_media_element_poster_"));
             values.append(posterURL.string());
         }
     }
 
     if (controls()) {
-        names.append("_media_element_controls_");
-        values.append("true");
+        names.append(ASCIILiteral("_media_element_controls_"));
+        values.append(ASCIILiteral("true"));
     }
 
     url = src();
@@ -3982,7 +3979,7 @@ void HTMLMediaElement::getPluginProxyParams(KURL& url, Vector<String>& names, Ve
 
     m_currentSrc = url;
     if (url.isValid() && frame && frame->loader()->willLoadMediaElementURL(url)) {
-        names.append("_media_element_src_");
+        names.append(ASCIILiteral("_media_element_src_"));
         values.append(m_currentSrc.string());
     }
 }
